PC-Roboard Solved

--- a/Integration2/COM-BOARD/Makefile
+++ b/Integration2/COM-BOARD/Makefile
@@ -1,7 +1,8 @@
 
 CCGL = gcc
 FLAGS = 
-LIBS = -I../../include -L../../lib -lRBIO -lstdc++
+#LIBS = -I../../include -L../../lib -lRBIO -lstdc++
+LIBS = 
 
 all:	roboardSide
 roboardSide: roboardSide.cpp
